client/css/style.css
body {
  font-family: 'Lato', sans-serif;
  margin: 0;
  padding: 0;
  background-color: black;
}

#page-container {
  display: flex;
  justify-content: center;
}

#players-panel {
  width: 10%;
  float: left;
  border: 2px solid black;
  margin: 0;
  padding: 0;
}

#players-list {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  color: white;
  background-color: #270202;
}

#players-list li {
  width: 100%;
  height: 10%;
  font-size: 14px;
  list-style: none;
  line-height: 30%;
  text-align: center;
  margin: 0;
  padding-top: 10px;
  border-top: 2px solid white;
}

#controls-panel {
  width: 20%;
  float: right;
  background-color: #270202;
}

#controls-info {
  height: 15%;
  color: white;
  text-align: center;
}

#controls-info h1 {
  font-size: 1.25em;
}

#controls-cards {
  height: 60%;
  border-top: 5px solid black;
  border-bottom: 5px solid black;
}

#controls-actions {
  height: 25%;
  text-align: center;
}

#controls-actions button {
  width: 90%;
  height: 15%;
  color: white;
  background-color: #492ac3;
  border: 3px solid #011425;
  border-radius: 5px;
  margin-top: 2%;
  margin-bottom: 2%;
}

#controls-actions button:hover {
  cursor: pointer;
  background-color: #171230;
}

#controls-actions button:disabled {
  background-color: grey;
  cursor: not-allowed;
}

#game-board {
  display: grid;

  /*grid-template-rows: 104px 53px 54px 158px 53px 102px 56px 105px 158px;
  grid-template-columns: 61px 165px 53px 145px 260px 144px 54px 163px 60px;*/

  grid-template-rows: 148px 75px 77px 225px 75px 146px 80px 150px 225px;
  grid-template-columns: 87px 236px 75px 207px 371px 205px 77px 233px 85px;
  grid-row-gap: 0;
  grid-column-gap: 0;
}

.board-tile {
  display: flex;
  max-width: 100%;
  height: auto;
  justify-content: center;
  align-items: center;
}

.board-tile * {
  margin-left: 2px;
  margin-right: 2px;
}

#tile-master-suite {
  background: url('../images/tile_01.jpg');
  grid-row: 1 / 4;
  grid-column: 1 / 3;
}

#tile-upper-left-hall {
  background: url('../images/tile_02.jpg');
  grid-row: 1 / 4;
  grid-column: 3 / 4;
}

#tile-nursery {
  background: url('../images/tile_03.jpg');
  grid-row: 1 / 3;
  grid-column: 4 / 5;
}

#tile-armory {
  background: url('../images/tile_04.jpg');
  grid-row: 1 / 2;
  grid-column: 5 / 6;
}

#tile-library {
  background: url('../images/tile_05.jpg');
  grid-row: 1 / 3;
  grid-column: 6 / 7;
}

#tile-upper-right-hall {
  background: url('../images/tile_06.jpg');
  grid-row: 1 / 4;
  grid-column: 7 / 8;
}

#tile-tennessee-room {
  background: url('../images/tile_07.jpg');
  grid-row: 1 / 4;
  grid-column: 8 / 10;
}

#tile-gallery {
  background: url('../images/tile_08.jpg');
  grid-row: 2 / 3;
  grid-column: 5 / 6;
}

#tile-upper-left-staircase {
  background: url('../images/tile_12.jpg');
  grid-row: 4 / 5;
  grid-column: 1 / 2;
}

#tile-lancaster-room {
  background: url('../images/tile_13.jpg');
  grid-row: 4 / 5;
  grid-column: 2 / 4;
}

#tile-sitting-room {
  background: url('../images/tile_09.jpg');
  grid-row: 3 / 5;
  grid-column: 4 / 5;
}

#tile-dining-hall {
  background: url('../images/tile_10.jpg');
  grid-row: 3 / 6;
  grid-column: 5 / 6;
}

#tile-billiard-room {
  background: url('../images/tile_11.jpg');
  grid-row: 3 / 5;
  grid-column: 6 / 7;
}

#tile-lilac-room {
  background: url('../images/tile_14.jpg');
  grid-row: 4 / 5;
  grid-column: 7 / 9;
}

#tile-upper-right-staircase {
  background: url('../images/tile_15.jpg');
  grid-row: 4 / 5;
  grid-column: 9 / 10;
}

#tile-left-hall {
  background: url('../images/tile_16.jpg');
  grid-row: 5 / 6;
  grid-column: 1 / 5;
}

#tile-right-hall {
  background: url('../images/tile_17.jpg');
  grid-row: 5 / 6;
  grid-column: 6 / 10;
}

#tile-kitchen {
  background: url('../images/tile_18.jpg');
  grid-row: 6 / 8;
  grid-column: 1 / 3;
}

#tile-lower-left-hall {
  background: url('../images/tile_23.jpg');
  grid-row: 6 / 9;
  grid-column: 3 / 4;
}

#tile-trompy-room {
  background: url('../images/tile_20.jpg');
  grid-row: 6 / 8;
  grid-column: 4 / 5;
}

#tile-drawing-room {
  background: url('../images/tile_21.jpg');
  grid-row: 6 / 7;
  grid-column: 5 / 6;
}

#tile-parlor {
  background: url('../images/tile_22.jpg');
  grid-row: 6 / 8;
  grid-column: 6 / 7;
}

#tile-lower-right-hall {
  background: url('../images/tile_25.jpg');
  grid-row: 6 / 9;
  grid-column: 7 / 8;
}

#tile-servants-quarters {
  background: url('../images/tile_26.jpg');
  grid-row: 6 / 8;
  grid-column: 8 / 10;
}

#tile-foyer {
  background: url('../images/tile_27.jpg');
  grid-row: 7 / 8;
  grid-column: 5 / 6;
}

#tile-wine-cellar {
  background: url('../images/tile_28.jpg');
  grid-row: 8 / 9;
  grid-column: 1 / 3;
}

#tile-green-house {
  background: url('../images/tile_29.jpg');
  grid-row: 8 / 10;
  grid-column: 4 / 5;
}

#tile-piazza {
  background: url('../images/tile_30.jpg');
  grid-row: 8 / 10;
  grid-column: 5 / 6;
}

#tile-carriage-house {
  background: url('../images/tile_31.jpg');
  grid-row: 8 / 10;
  grid-column: 6 / 7;
}

#tile-white-room {
  background: url('../images/tile_32.jpg');
  grid-row: 8 / 9;
  grid-column: 8 / 10;
}

#tile-winter-garden {
  background: url('../images/tile_33.jpg');
  grid-row: 9 / 10;
  grid-column: 1 / 4;
}

#tile-hedge-maze {
  background: url('../images/tile_34.jpg');
  grid-row: 9 / 10;
  grid-column: 7 / 10;
}

/* MODAL - START*/
.modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.8);
  animation: modal-load 3s;
}

.modal-content {
  background-color: #f4f4f4;
  margin: 20% auto;
  width: 50%;
  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  animation: scroll-in 3s;
}

.modal-header h2,
.modal-footer h3 {
  margin: 0;
}

.modal-header {
  background-color: #d11600;
  padding: 10px;
  color: white;
  border-radius: 5px 5px 0px 0px;
  text-align: center;
}

.modal-body {
  margin: 0;
  padding: 10px 20px;
  padding: 10px;
  color: black;
}

.modal-body p {
  font-weight: bold;
  font-size: 15px;
  text-align: center;
}

.modal-footer {
  background-color: #d11600;
  text-align: center;
  color: white;
  border-radius: 0px 0px 5px 5px;
  padding: 5px;
}

.playerCounter-container {
  text-align: center;
  margin: 10px 0 10px 0;
  padding: 0;
  user-select: none;
}

.welcomeMessage {
  margin-bottom: 5px;
}

.decrementBtn,
.incrementBtn {
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
}

.decrementBtn:hover,
.incrementBtn:hover {
  color: #d11600;
}

.playerCount {
  font-weight: bold;
  font-size: 20px;
  padding-left: 5px;
  padding-right: 5px;
}

.Btn {
  text-align: center;
  border: 2px solid #d11600;
  margin: 0 auto;
  width: 20%;
  padding: 5px 5px;
  border-radius: 6px;
  background-color: white;
  cursor: pointer;
  font-weight: bold;
  transition: ease-in 0.2s;
  user-select: none;
}

.Btn:hover {
  background-color: #d11600;
  color: white;
  transition: ease-in 0.2s;
}

.loader {
  font-size: 10px;
  margin: 50px auto;
  text-indent: -9999em;
  width: 11em;
  height: 11em;
  border-radius: 50%;
  background: #d11600;
  background: -moz-linear-gradient(
    left,
    #d11600 10%,
    rgba(255, 255, 255, 0) 42%
  );
  background: -webkit-linear-gradient(
    left,
    #d11600 10%,
    rgba(255, 255, 255, 0) 42%
  );
  background: -o-linear-gradient(left, #d11600 10%, rgba(255, 255, 255, 0) 42%);
  background: -ms-linear-gradient(
    left,
    #d11600 10%,
    rgba(255, 255, 255, 0) 42%
  );
  background: linear-gradient(
    to right,
    #d11600 10%,
    rgba(255, 255, 255, 0) 42%
  );
  position: relative;
  -webkit-animation: load3 1.4s infinite linear;
  animation: load3 1.4s infinite linear;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}
.loader:before {
  width: 50%;
  height: 50%;
  background: #d11600;
  border-radius: 100% 0 0 0;
  position: absolute;
  top: 0;
  left: 0;
  content: '';
}
.loader:after {
  background: #f4f4f4;
  width: 75%;
  height: 75%;
  border-radius: 50%;
  content: '';
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
@-webkit-keyframes load3 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load3 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

input[type='text'] {
  border: 1px solid #222222;
  border-radius: 2px;
  height: 20px;
  outline: none;
}

input[type='text']:focus,
input[type='text']:hover {
  border: 1px solid red;
}

.gameMode-container {
  display: flex;
  justify-content: space-between;
}

.player {
  height: 25px;
  width: 25px;
  border-radius: 50%;
  display: inline-block;
  border: 2px solid black;
  box-shadow: 3px 3px 3px black;
}

.player-icon {
  height: 25px;
  width: 25px;
  border: 2px solid black;
  border-radius: 50%;
  display: inline-block;
  margin-left: 5px;
  margin-top: 5px;
}

.doctorLucky {
  height: 25px;
  width: 25px;
  border-radius: 50%;
  display: inline-block;
  box-shadow: 3px 3px 3px black;
}

.possible-move {
  border: 2px dashed lime;
}

.possible-move:hover {
  border: 2px solid lime;
}

.card {
  display: inline-block;
  width: 80px;
  height: 120px;
  background-color: white;
  border-radius: 3px;
  margin: 10px;
  border: 1px solid black;
  font-size: 16px;
  text-align: center;
  font-weight: bold;
}

.card p {
  font-size: 14px;
}

.card p:nth-of-type(2) {
  font-size: 10px;
}

.card:hover {
  box-shadow: 2px 2px 10px 1px red;
}

.card-selected {
  box-shadow: 2px 2px 10px 1px red;
}

.card-container {
  display: flex;
  justify-content: center;
}

.card:hover {
  cursor: pointer;
}

.in-sight {
  opacity: 0.8;
}

@keyframes modal-load {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes scroll-in {
  0% {
    opacity: 0;
    transform: translateY(-100%);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.hidden {
  opacity: 0;
}

